# serviceassistant

./: .gitignore  LICENSE  README.md  pyproject.toml  run.bat
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
src/: main.py
tests/: test_api.py
