[project]
name = "ai-service-business-receptionist"
version = "0.1.0"
description = "Capture service-business leads, summarize urgency, and manage receptionist intake workflows."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "python-multipart>=0.0.9"]
[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27"]
[tool.pytest.ini_options]
pythonpath = ["."]
